[package]
name = "recently-used-xbel"
version = "1.0.0"
edition = "2021"
description = "Parse the ~/.local/share/recently-used.xbel file"
repository = "https://github.com/pop-os/recently-used-xbel"
license = "MPL-2.0"
keywords = ["recently", "used", "xbel"]

[dependencies]
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde-xml-rs = "0.6"
thiserror = "1.0.30"
chrono = "0.4"
url = "2.5.2"

[dev-dependencies]
tempfile = "3.12.0"
