[package]
name = "recently-used-xbel"
version = "1.1.0"
edition = "2021"
description = "Parse the ~/.local/share/recently-used.xbel file"
repository = "https://github.com/pop-os/recently-used-xbel"
license = "MPL-2.0"
keywords = ["recently", "used", "xbel"]

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.209", features = ["derive"] }
quick-xml = { version = "0.36.1", features = ["overlapped-lists", "serialize", "serde-types"]}
thiserror = "1.0.63"
chrono = "0.4"
url = "2.5.2"
infer = "0.16"
mime_guess = "2.0.5"

[dev-dependencies]
tempfile = "3.12.0"
